remove test optimization from make